# risk_modeling-q1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  home_credit.yaml  model_lgbm.yaml  model_logreg.yaml  thresholds.yaml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_error_analysis.ipynb
reports/: q1_technical_report.md
reports/model_cards/: model_card.md
scripts/: insert_eda_markdown_docs.py  structure_eda_notebook.py
src/: __init__.py
src/data/: __init__.py  build_dataset.py  home_credit.py  load.py  quality.py
src/features/: build_features.py  encoders.py  transforms.py
src/models/: __init__.py  calibrate.py  evaluate.py  predict.py  train.py
src/reporting/: __init__.py  figures.py  generate_report.py
src/utils/: __init__.py  paths.py  seed.py
src/validation/: __init__.py  cv.py  splitters.py
tests/: test_data_quality.py  test_home_credit.py  test_splits.py
